# hyperfocus-agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
proto/hyperfocus/: hyperfocus.proto  hyperfocus_services.proto
src/: main.rs
src/core/: config.rs  error.rs  mod.rs  state.rs
src/grpc/: health.rs
src/proto/: mod.rs
tests/core/: config.rs  state.rs
tests/grpc/: health.rs
